Archive2/a9/b73984e92257e0/output
main.cpp:25:5: error: no matching function for call to 'foo'
    foo(t);
    ^~~
main.cpp:10:6: note: candidate function not viable: no known conversion from 'A' to 'A &&' for 1st argument
void foo(A&&)
     ^
1 error generated.
